# QueryWeaver-Extended

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  graph_loader.py  graphiti_tool.py  package-lock.json  playwright.config.ts  pyproject.toml  setup_e2e_tests.sh
.github/: copilot-instructions.md  dependabot.yml  wordlist.txt
.github/workflows/: dependency-review.yml  playwright.yml  publish-docker.yml  pylint.yml  spellcheck.yml  tests.yml
api/: app_factory.py  config.py  utils.py
api/agents/: analysis_agent.py  follow_up_agent.py  relevancy_agent.py  response_formatter_agent.py  utils.py
api/auth/: user_management.py
api/core/: schema_loader.py  text2sql.py
api/loaders/: mssql_loader.py  postgres_loader.py
api/memory/: graphiti_tool.py
api/routes/: settings.py  validate_route.py
api/sql_utils/: validator.py
app/: package-lock.json  package.json
app/src/: App.tsx
app/src/components/chat/: ChartViewer.tsx  ChatInterface.tsx  ChatMessage.tsx
app/src/components/layout/: Sidebar.tsx
app/src/components/modals/: DatabaseModal.tsx
app/src/contexts/: SettingsContext.tsx
app/src/hooks/: useApiKeyValidation.ts
app/src/lib/: csrf.ts
app/src/pages/: Index.tsx  Settings.tsx
app/src/services/: auth.ts  chat.ts  database.ts  tokens.ts
app/src/types/: api.ts
app/src/utils/: vendorConfig.ts
data/: dump.rdb
docs/: postgres_loader.md
e2e/infra/api/: apiRequests.ts
e2e/logic/api/: apiCalls.ts
e2e/tests/: chat.spec.ts  database.spec.ts
tests/: conftest.py  test_csrf_middleware.py  test_postgres_loader.py
